  - Bugfix: Newlines around targets and references prevent run-together
    paragraphs.
  - Fix internal hyperlinks.
  - Use class defaults for page margins ('typearea' now optional).
  - Float placement made configurable, default changed to "here definitely".
  - Typeset generic topic as "quote block with title".
  - Use template (file and configuration option).
  - Render doctest blocks as literal blocks (fixes [ 1586058 ]).
  - Use `translate` instead of repeated `replace` calls for text encoding.
  - Hyperlinked footnotes and support for symbol footnotes and
    ``--footnote-references=brackets`` with ``--use-latex-footnotes``.

* docutils/writers/manpage.py

  - Do not print version at document end, this is done by the viewer.
  - Do not print date at document end, this is done by the viewer.
  - Fix storage of docinfo fields for none standard fields.

* docutils/tools/rst2man.py

Release 0.5 (2008-06-25)
========================

* docutils/languages/he.py: Added to project: Hebrew mappings by
  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be
    UTF-8-encoded.
  - Paths of applied configuration files are now recorded in the
    runtime setting ``_config_files`` (accessible via
    ``--dump-settings``).
  - Added ``--strip-elements-with-class`` and ``--strip-class``
    options (``strip_elements_with_classes`` and ``strip_classes``
    settings).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Allow ``+`` and ``:`` in reference names.
  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.