@@ -1,5 +1,7 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
-$head_prefix$requirements
+$head_prefix\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in PDF
+$requirements
 %%% User specified packages and stylesheets
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
