@@ -1,10 +1,11 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
 \documentclass[a4paper,english]{article}
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in PDF
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
-\usepackage{fixltx2e} % fix LaTeX2e shortcomings
 
 %%% User specified packages and stylesheets
 \usepackage{../../data/spam}
@@ -12,7 +13,7 @@
 
 %%% Fallback definitions for Docutils-specific commands
 
-% hyperref package (PDF hyperlinks):
+% hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 }{}
