@@ -1,10 +1,11 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
 \documentclass[a4paper,english]{article}
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in PDF
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
-\usepackage{fixltx2e} % fix LaTeX2e shortcomings
 \usepackage{color}
 \usepackage{float} % float configuration
 \floatplacement{figure}{H} % place figures here definitely
@@ -70,12 +71,14 @@
   \raisebox{1em}{\hypertarget{#1}{}}%
   \hyperlink{#2}{\textsuperscript{#3}}%
 }
-\providecommand{\DUfootnotetext}[4]{{%
+\providecommand{\DUfootnotetext}[4]{%
+  \begingroup%
   \renewcommand{\thefootnote}{%
     \protect\raisebox{1em}{\protect\hypertarget{#1}{}}%
     \protect\hyperlink{#2}{#3}}%
   \footnotetext{#4}%
-}}
+  \endgroup%
+}
 
 % inline markup (custom roles)
 % \DUrole{#1}{#2} tries \DUrole#1{#2}
@@ -168,7 +171,7 @@
   \vskip 0.5\baselineskip
 }
 
-% hyperref package (PDF hyperlinks):
+% hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 }{}
