@@ -29,11 +29,12 @@ def suite():
 latex_head_prefix = b(
 r"""% generated by Docutils <http://docutils.sourceforge.net/>
 \documentclass[a4paper,english]{article}
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in PDF
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
-\usepackage{fixltx2e} % fix LaTeX2e shortcomings
 """)
 
 latex_requirements = b('')
@@ -43,7 +44,7 @@ latex_head = b(r"""
 
 %%% Fallback definitions for Docutils-specific commands
 
-% hyperref package (PDF hyperlinks):
+% hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 }{}
@@ -64,7 +65,7 @@ latex_head_DUtitle = b(r"""
   \fi
 }
 
-% hyperref package (PDF hyperlinks):
+% hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 }{}
